2009-05-20  Thomas Moulard  <thomas.moulard@gmail.com>

	Implement simple gradient computation/check by finite difference.
	* include/Makefile.am: Distribute new headers.
	* include/roboptim/core/derivable-function.hh: Restyle.
	* include/roboptim/core/finite-difference-gradient.hh: New.
	* src/Makefile.am: Compile new source.
	* src/finite-difference-gradient.cc: New.
	* tests/Makefile.am: Add new test.
	* tests/finite-difference-gradient.cc: New.
	* tests/finite-difference-gradient.stdout: New.
	* tests/testsuite.at: Run new test.

2009-05-14  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix warnings.
	* include/roboptim/core/visualization/gnuplot-function.hh:
	Predeclare functions.

2009-05-10  Thomas Moulard  <thomas.moulard@gmail.com>

	Predeclare functions.
	* include/roboptim/core/visualization/gnuplot-commands.hh,
	* src/roboptim-core-dummy-plugin.cc: Predeclare functions to
	remove some GCC warnings.

2009-05-08  Thomas Moulard  <thomas.moulard@gmail.com>

	Add ltdl headers to CPPFLAGS everywhere.
	* build-aux/init.mk: Move AM_CPPFLAGS modification from here...
	* src/Makefile.am: ...to here.

2009-05-08  Thomas Moulard  <thomas.moulard@gmail.com>

	Add ltdl include directory to CPPFLAGS.
	* src/Makefile.am: Here.

2009-05-07  Thomas Moulard  <thomas.moulard@gmail.com>

	Remove Autotools generated files.
	* .gitignore: Add filter.
	* build-aux/argz.m4: Remove.
	* build-aux/config.guess: Remove.
	* build-aux/config.sub: Remove.
	* build-aux/depcomp: Remove.
	* build-aux/install-sh: Remove.
	* build-aux/libtool.m4: Remove.
	* build-aux/ltdl.m4: Remove.
	* build-aux/ltmain.sh: Remove.
	* build-aux/ltoptions.m4: Remove.
	* build-aux/ltsugar.m4: Remove.
	* build-aux/ltversion.m4: Remove.
	* build-aux/lt~obsolete.m4: Remove.
	* build-aux/missing: Remove.
	* configure.ac: Remove buggy line.
	* libltdl/COPYING.LIB: Remove.
	* libltdl/Makefile.am: Remove.
	* libltdl/README: Remove.
	* libltdl/argz.c: Remove.
	* libltdl/argz_.h: Remove.